# supercute

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE_CHECKLIST.md  SECURITY.md  THIRD_PARTY_DATA.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md  audit_hard.jsonl  benchmark.jsonl  benchmark_3model_results.txt  eval_results.jsonl  eval_summary.json  hard.jsonl  sec_records.jsonl
docs/: blog_what_breaks_gpt55.md  code_review.md  gpt55_attack_vectors.md  model_results.md  public_dataset_hardening.md  realtok_README.md  release_notes.md
paper/: README.md  main.tex  references.bib
supercute/: __init__.py  analyze_eval.py  benchmark.py  client.py  error_audit.py  evaluate.py  fetch_finqa.py  fetch_sec.py  fetch_tabfact.py  full_eval.py  generate.py  grade.py  judge.py  make_figure.py  publicdata_adapters.py  render_pdf.py  render_pdf_journal.py  run.py  run_audit.py  scenarios.py  scenarios_audit.py  scenarios_byte.py  scenarios_code.py  scenarios_construct.py  scenarios_finqa.py  scenarios_hard.py  scenarios_invisible.py  scenarios_net.py  scenarios_publiclift.py  scenarios_realtok.py  scenarios_sci.py  scenarios_sec.py  scenarios_tabfact.py  scenarios_tok.py  scenarios_unicode.py  selfcheck.py  sweep.py
tests/: test_generators.py  test_grade.py  test_registry.py
